# artistgrid-dev

./: .gitignore  Cargo.toml  artists.csv  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/: actions.ts  globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: ArtistGalleryClient.tsx
app/view/: page.tsx
app/view/components/: TrackerViewClient.tsx
components/: global-player.tsx
public/: _redirects  backup.csv  message.md  sheet.csv
src/: main.rs
types/: index.d.ts
