[package]
name = "tracker-proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
moka = { version = "0.12", features = ["future"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
once_cell = "1.19"
