[package]
name = "tracker-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
bytes = "1"
dotenvy = "0.15"
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["compression-gzip", "compression-br"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
